dynamic-rupture/SH_max_test/logs/jobid_3939430/3939430.SH_max_test.out
Thu 26 Sep 2024 11:26:25 PM UTC
num_nodes: 16 ntasks: 16 cpus_per_task:
Line 63 replaced with: OutputFile='/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430'
Job log complete.
Starting SeisSol...
Fri Sep 27 01:26:26, Info:  Using the parameter file parameters.par 
Fri Sep 27 01:26:26, Info:  Reading SeisSol parameter file... 
Fri Sep 27 01:26:26, Info:  In your parameter file, you have specified a non-positive interval for "checkpointinterval" . This mechanism is deprecated and may be removed in a future version of SeisSol. Consider disabling the whole module by setting "checkpoint" to 0 instead by adding "checkpoint = 0" to the "output" section of your parameter file instead. 
Fri Sep 27 01:26:26, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:26:26, Info:  The field "printintervalcriterion" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:26:26, Info:  The field "pickdttype" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:26:26, Info:  The field "faultoutputflag" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:26:26, Info:  The field "boundaries" is no longer in use. You may safely remove it from your parameters file. 
Fri Sep 27 01:26:26, Info:  SeisSol parameter file read successfully. 
Fri Sep 27 01:26:26, Info:  Model information: 
Fri Sep 27 01:26:26, Info:  Elastic model: yes 
Fri Sep 27 01:26:26, Info:  Viscoelastic model: no 
Fri Sep 27 01:26:26, Info:  Anelastic model: no 
Fri Sep 27 01:26:26, Info:  Poroelastic model: no 
Fri Sep 27 01:26:26, Info:  Anisotropic model: no 
Fri Sep 27 01:26:26, Info:  Plasticity: no 
Fri Sep 27 01:26:26, Info:  Welcome to SeisSol 
Fri Sep 27 01:26:26, Info:  Copyright (c) 2012 - 2024  SeisSol Group 
Fri Sep 27 01:26:26, Info:  Version: v1.1.4-148-g60aedc8c (dirty) 
Fri Sep 27 01:26:26, Info:  Built on: Jun 17 2024 21:03:35 
Fri Sep 27 01:26:26, Info:  Last commit: 60aedc8c2ae0a5d9e5a46cc3a40e4eaf1c047225 at 2024-06-06T12:54:08+00:00 
Fri Sep 27 01:26:26, Info:  Compiled with HOST_ARCH = skx 
Fri Sep 27 01:26:26, Info:  Running on (rank=0): "i01r01c03s01" 
Fri Sep 27 01:26:26, Info:  Using MPI with #ranks: 16 
Fri Sep 27 01:26:26, Info:  Node-wide (shared memory) MPI with #ranks/node: 1 
Fri Sep 27 01:26:26, Info:  Using asynchronous MPI routines. 
Fri Sep 27 01:26:26, Info:  Using OMP with #threads/rank: 94 
Fri Sep 27 01:26:26, Info:  OpenMP worker affinity (this process): "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Fri Sep 27 01:26:26, Info:  OpenMP worker affinity (this node)   : "0123456789|0123456789|0123456789|0123456789|0123456-89|0123456789|0123456789|0123456789|0123456789|01234-" 
Fri Sep 27 01:26:26, Info:  Using a communication thread for advancing MPI communication. 
Fri Sep 27 01:26:26, Info:  Communication thread affinity        : "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:26:26, Info:  The stack size ulimit is 2097152 [kiB] ( = 2.0000 GiB ). 
Fri Sep 27 01:26:26, Info:  Begin init mesh. 
Fri Sep 27 01:26:26, Info:  Mesh file: "/dss/dsshome1/01/di35poq/mesh/mesh_v07/Haiti_v07_lowres" 
Fri Sep 27 01:26:26, Info:  Running mini SeisSol to determine node weights. 
Fri Sep 27 01:26:26, Info:  miniSeisSol configured with 50000 elements and 10 repeats per process 
Fri Sep 27 01:26:26, Info:  Node weights: mean = 41.3714  std = 0.388226  min = 40.3958  median = 41.4433  max = 41.8439 
Fri Sep 27 01:26:26, Info:  Reading PUML mesh 
Fri Sep 27 01:26:26, Info:  Inferring boundary format. 
Fri Sep 27 01:26:26, Info:  Boundary format not given in PUML file; inferring from array shape. 
Fri Sep 27 01:26:26, Info:  Using boundary format: i32 (4xi8) 
Fri Sep 27 01:26:26, Info:  Found 2685422 cells 
Fri Sep 27 01:26:26, Info:  Found 477078 vertices 
Fri Sep 27 01:26:28, Info:  Computing LTS weights. 
Fri Sep 27 01:26:31, Info:  Limiting number of clusters to 2147483646 
Fri Sep 27 01:26:31, Info:  Computing LTS weights. Done.  (108216 reductions.)
Fri Sep 27 01:26:31, Info:  Using the Parmetis partition library and strategy. 
Fri Sep 27 01:26:34, Info:  PUML mesh read in: 7.7366 s (min: 7.6758 s, max: 7.8669 s)
Fri Sep 27 01:26:34, Info:  The mesh has been read. Starting post processing. 
Fri Sep 27 01:26:34, Info:  Extracting fault information. 
Fri Sep 27 01:26:34, Info:  Exchanging ghostlayer metadata. 
Fri Sep 27 01:26:36, Info:  Mesh initialized in: 9.7314 s (min: 9.7311 s, max: 9.7322 s)
Fri Sep 27 01:26:36, Info:  End init mesh. 
Fri Sep 27 01:26:36, Info:  Begin init model. 
Fri Sep 27 01:26:36, Info:  Initialize LTS. 
Fri Sep 27 01:26:36, Info:  Deriving clusters ids for min. time step width / multiRate: 0.000213316 / 2 
Fri Sep 27 01:26:36, Info:  Due to wiggle factor of 1 the minimum timestep size is reduced to 0.000213316 
Fri Sep 27 01:26:36, Info:  Number of elements in time clusters: 
Fri Sep 27 01:26:36, Info:  0: 2088 
Fri Sep 27 01:26:36, Info:  1: 265401 
Fri Sep 27 01:26:36, Info:  2: 1618976 
Fri Sep 27 01:26:36, Info:  3: 538212 
Fri Sep 27 01:26:36, Info:  4: 147352 
Fri Sep 27 01:26:36, Info:  5: 35652 
Fri Sep 27 01:26:36, Info:  6: 11329 
Fri Sep 27 01:26:36, Info:  7: 18592 
Fri Sep 27 01:26:36, Info:  8: 47781 
Fri Sep 27 01:26:36, Info:  9: 39 
Fri Sep 27 01:26:36, Info:  maximum theoretical speedup (compared to GTS): 6.4313 per cell LTS, 4.34786 with the used clustering. 
Fri Sep 27 01:26:36, Info:  Number of elements in dynamic rupture time clusters: 
Fri Sep 27 01:26:36, Info:  0 (dr): 617 
Fri Sep 27 01:26:36, Info:  1 (dr): 78794 
Fri Sep 27 01:26:36, Info:  2 (dr): 309941 
Fri Sep 27 01:26:36, Info:  3 (dr): 2509 
Fri Sep 27 01:26:36, Info:  4 (dr): 0 
Fri Sep 27 01:26:36, Info:  5 (dr): 0 
Fri Sep 27 01:26:36, Info:  6 (dr): 0 
Fri Sep 27 01:26:36, Info:  7 (dr): 0 
Fri Sep 27 01:26:36, Info:  8 (dr): 0 
Fri Sep 27 01:26:36, Info:  9 (dr): 0 
Fri Sep 27 01:26:36, Info:  Initialize Friction Model 
Fri Sep 27 01:26:37, Info:  Initialize cell material parameters. 
Fri Sep 27 01:26:38, Info:  Initialize Memory layout. 
Fri Sep 27 01:26:39, Info:  Initialize cell-local matrices. 
Fri Sep 27 01:26:39, Info:  Initializing Fault, using a quadrature rule with  25  points. 
Fri Sep 27 01:29:07, Info:  Model initialized in: 2 min 30.9136 s (min: 2 min 30.9118 s, max: 2 min 30.9167 s)
Fri Sep 27 01:29:07, Info:  End init model. 
Fri Sep 27 01:29:07, Info:  Setting initial conditions. 
Fri Sep 27 01:29:07, Info:  Using initial condition "Zero" . 
Fri Sep 27 01:29:07, Info:  Reading source. 
Fri Sep 27 01:29:07, Info:  No source term specified. 
Fri Sep 27 01:29:07, Info:  Setting up boundary conditions. 
Fri Sep 27 01:29:07, Info:  Begin init output. 
Fri Sep 27 01:29:07, Info:  Initializing free surface integrator. 
Fri Sep 27 01:29:07, Info:  Initializing free surface integrator. Done. 
Fri Sep 27 01:29:07, Info:  Enabling 2D fault output 
Fri Sep 27 01:29:07, Info:  Initializing Fault output. Number of sub-triangles: 4 
Fri Sep 27 01:29:07, Info:  Initializing XDMF fault output. 
Fri Sep 27 01:29:07, Info:  Fault writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:29:07, Info:  Initializing XDMF fault output. Done. 
Fri Sep 27 01:29:07, Info:  Wave field writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:29:07, Info:  Initializing XDMF wave field output. 
Fri Sep 27 01:29:07, Info:  Refinement is turned off. 
Fri Sep 27 01:29:07, Info:  Refinement class initialized 
Fri Sep 27 01:29:07, Info:  VariableSubsampler initialized 
Fri Sep 27 01:29:07, Info:  High order output initialized 
Fri Sep 27 01:29:07, Info:  Initializing XDMF wave field output. Done. 
Fri Sep 27 01:29:07, Info:  Initializing free surface output. 
Fri Sep 27 01:29:07, Info:  Free surface writer thread affinity: "----------|----------|----------|----------|-------7--|----------|----------|----------|----------|-----5" 
Fri Sep 27 01:29:07, Info:  No record points read. 
Fri Sep 27 01:29:07, Info:  Finding meshIds for receivers... 
Fri Sep 27 01:29:08, Info:  Cleaning possible double occurring receivers for MPI... 
Fri Sep 27 01:29:08, Info:  Mapping receivers to LTS cells... 
Fri Sep 27 01:29:08, Info:  Initializing energy output. 
Fri Sep 27 01:29:08, Info:  End init output. 
Fri Sep 27 01:29:08, Info:  Initializing free surface output. Done. 
Fri Sep 27 01:29:08, Info:  Finishing initialization... 
Fri Sep 27 01:29:08, Info:  Starting simulation. 
Fri Sep 27 01:29:08, Info:  Writing faultoutput at time 0.
Fri Sep 27 01:29:08, Info:  Writing faultoutput at time 0. Done.
Fri Sep 27 01:29:08, Info:  Waiting for last wave field. 
Fri Sep 27 01:29:08, Info:  Writing wave field at time 0.
Fri Sep 27 01:29:08, Info:  Writing wave field at time 0. Done.
Fri Sep 27 01:29:08, Info:  Writing free surface at time 0.
Fri Sep 27 01:29:08, Info:  Writing free surface at time 0. Done.
Fri Sep 27 01:29:08, Info:  Writing energy output at time 0 
Fri Sep 27 01:29:08, Info:  Total momentum (X, Y, Z): 0  , 0  , 0 
Fri Sep 27 01:29:08, Info:  Writing energy output at time 0 Done. 
Fri Sep 27 01:29:08, Info:  Time spent for initial IO: 62.0402 ms (min: 50.5124 ms, max: 82.1904 ms)
Fri Sep 27 01:29:34, Info:  Writing faultoutput at time 0.5.
Fri Sep 27 01:29:34, Info:  Writing faultoutput at time 0.5. Done.
Fri Sep 27 01:29:34, Info:  Writing energy output at time 0.5 
Fri Sep 27 01:29:34, Info:  Elastic energy (total, % kinematic, % potential):  1.34089e+12  , 24.8953  , 75.1047 
Fri Sep 27 01:29:34, Info:  Total momentum (X, Y, Z): -0.012933  , 0.0312599  , 0.00242151 
Fri Sep 27 01:29:34, Info:  Frictional work (total, % static, % radiated):  1.35674e+12  , 72.8795  , 27.1205 
Fri Sep 27 01:29:34, Info:  Seismic moment (without plasticity): 1.65144e+16  Mw: 4.74191 
Fri Sep 27 01:29:34, Info:  Writing energy output at time 0.5 Done. 
Fri Sep 27 01:29:34, Info:  Time spent this phase (total): 26.3980 s (min: 26.3707 s, max: 26.4165 s)
Fri Sep 27 01:29:34, Info:  Time spent this phase (compute): 26.3360 s (min: 26.3156 s, max: 26.3583 s)
Fri Sep 27 01:29:34, Info:  Time spent this phase (IO): 49.1232 ms (min: 39.9316 ms, max: 69.8759 ms)
Fri Sep 27 01:29:34, Info:  Performance since the start: 9.5341 TFLOP/s (rank 0: 603.1944 GFLOP/s , average over ranks: 595.8843 GFLOP/s ) 
Fri Sep 27 01:29:34, Info:  Performance since last sync point: 9.5341 TFLOP/s (rank 0: 603.1944 GFLOP/s , average over ranks: 595.8843 GFLOP/s ) 
Fri Sep 27 01:30:00, Info:  Writing faultoutput at time 1.
Fri Sep 27 01:30:00, Info:  Writing faultoutput at time 1. Done.
Fri Sep 27 01:30:00, Info:  Writing free surface at time 1.
Fri Sep 27 01:30:00, Info:  Writing free surface at time 1. Done.
Fri Sep 27 01:30:00, Info:  Writing energy output at time 1 
Fri Sep 27 01:30:00, Info:  Elastic energy (total, % kinematic, % potential):  1.02002e+13  , 23.9796  , 76.0204 
Fri Sep 27 01:30:00, Info:  Total momentum (X, Y, Z): 0.316987  , 0.433222  , -0.133646 
Fri Sep 27 01:30:00, Info:  Frictional work (total, % static, % radiated):  1.05549e+13  , 72.3299  , 27.6701 
Fri Sep 27 01:30:00, Info:  Seismic moment (without plasticity): 1.22896e+17  Mw: 5.32303 
Fri Sep 27 01:30:00, Info:  Writing energy output at time 1 Done. 
Fri Sep 27 01:30:00, Info:  Time spent this phase (total): 26.3612 s (min: 26.3335 s, max: 26.3759 s)
Fri Sep 27 01:30:00, Info:  Time spent this phase (compute): 26.3610 s (min: 26.3334 s, max: 26.3758 s)
Fri Sep 27 01:30:00, Info:  Time spent this phase (IO): 51.2043 ms (min: 40.0195 ms, max: 85.1010 ms)
Fri Sep 27 01:30:00, Info:  Performance since the start: 9.5408 TFLOP/s (rank 0: 603.7188 GFLOP/s , average over ranks: 596.3015 GFLOP/s ) 
Fri Sep 27 01:30:00, Info:  Performance since last sync point: 9.5475 TFLOP/s (rank 0: 604.2441 GFLOP/s , average over ranks: 596.7194 GFLOP/s ) 
Fri Sep 27 01:30:27, Info:  Writing faultoutput at time 1.5.
Fri Sep 27 01:30:27, Info:  Writing faultoutput at time 1.5. Done.
Fri Sep 27 01:30:27, Info:  Writing energy output at time 1.5 
Fri Sep 27 01:30:27, Info:  Elastic energy (total, % kinematic, % potential):  3.11316e+13  , 22.8008  , 77.1992 
Fri Sep 27 01:30:27, Info:  Total momentum (X, Y, Z): -0.251217  , -0.362756  , -0.0795625 
Fri Sep 27 01:30:27, Info:  Frictional work (total, % static, % radiated):  3.22354e+13  , 73.41  , 26.59 
Fri Sep 27 01:30:27, Info:  Seismic moment (without plasticity): 3.85164e+17  Mw: 5.65376 
Fri Sep 27 01:30:27, Info:  Writing energy output at time 1.5 Done. 
Fri Sep 27 01:30:27, Info:  Time spent this phase (total): 26.2547 s (min: 26.2438 s, max: 26.2589 s)
Fri Sep 27 01:30:27, Info:  Time spent this phase (compute): 26.2546 s (min: 26.2437 s, max: 26.2588 s)
Fri Sep 27 01:30:27, Info:  Time spent this phase (IO): 51.2078 ms (min: 39.9908 ms, max: 94.8169 ms)
Fri Sep 27 01:30:27, Info:  Performance since the start: 9.5559 TFLOP/s (rank 0: 604.7523 GFLOP/s , average over ranks: 597.2443 GFLOP/s ) 
Fri Sep 27 01:30:27, Info:  Performance since last sync point: 9.5862 TFLOP/s (rank 0: 606.8298 GFLOP/s , average over ranks: 599.1389 GFLOP/s ) 
Fri Sep 27 01:30:53, Info:  Writing faultoutput at time 2.
Fri Sep 27 01:30:53, Info:  Writing faultoutput at time 2. Done.
Fri Sep 27 01:30:53, Info:  Writing free surface at time 2.
Fri Sep 27 01:30:53, Info:  Writing free surface at time 2. Done.
Fri Sep 27 01:30:53, Info:  Wrote receivers in 3.44e-07 seconds. 
Fri Sep 27 01:30:53, Info:  Writing energy output at time 2 
Fri Sep 27 01:30:53, Info:  Elastic energy (total, % kinematic, % potential):  6.47437e+13  , 21.0739  , 78.9261 
Fri Sep 27 01:30:53, Info:  Total momentum (X, Y, Z): -0.595395  , -0.481851  , -0.466002 
Fri Sep 27 01:30:53, Info:  Frictional work (total, % static, % radiated):  6.69555e+13  , 74.7813  , 25.2187 
Fri Sep 27 01:30:53, Info:  Seismic moment (without plasticity): 8.28014e+17  Mw: 5.87536 
Fri Sep 27 01:30:53, Info:  Writing energy output at time 2 Done. 
Fri Sep 27 01:30:53, Info:  Time spent this phase (total): 26.2454 s (min: 26.2427 s, max: 26.2614 s)
Fri Sep 27 01:30:53, Info:  Time spent this phase (compute): 26.2453 s (min: 26.2427 s, max: 26.2613 s)
Fri Sep 27 01:30:53, Info:  Time spent this phase (IO): 52.5791 ms (min: 40.0613 ms, max: 93.2519 ms)
Fri Sep 27 01:30:53, Info:  Performance since the start: 9.5643 TFLOP/s (rank 0: 605.3554 GFLOP/s , average over ranks: 597.7695 GFLOP/s ) 
Fri Sep 27 01:30:53, Info:  Performance since last sync point: 9.5896 TFLOP/s (rank 0: 607.1722 GFLOP/s , average over ranks: 599.3509 GFLOP/s ) 
Fri Sep 27 01:30:53, Info:  Ignoring duplicate synchronisation point at time 2 ; the last sync point was at  2 
Fri Sep 27 01:30:53, Info:  Waiting for last wave field. 
Fri Sep 27 01:30:53, Info:  Writing wave field at time 2.
Fri Sep 27 01:30:53, Info:  Writing wave field at time 2. Done.
Fri Sep 27 01:30:53, Info:  Ignoring duplicate synchronisation point at time 2 ; the last sync point was at  2 
Fri Sep 27 01:30:53, Info:  Ignoring duplicate synchronisation point at time 2 ; the last sync point was at  2 
Fri Sep 27 01:30:53, Info:  Ignoring duplicate synchronisation point at time 2 ; the last sync point was at  2 
Fri Sep 27 01:30:53, Info:  Simulation time (total): 1 min 45.2701 s (min: 1 min 45.2292 s, max: 1 min 45.3009 s)
Fri Sep 27 01:30:53, Info:  Simulation time (compute): 1 min 44.9930 s (min: 1 min 44.8626 s, max: 1 min 45.0366 s)
Fri Sep 27 01:30:53, Info:  Simulation time (IO): 265.8551 ms (min: 210.2806 ms, max: 424.4461 ms)
Fri Sep 27 01:30:53, Info:  Time spent in compute kernels: mean = 100.892  std = 2.42163  min = 93.9134  median = 101.548  max = 103.191 
Fri Sep 27 01:30:53, Info:  Load imbalance: 2.22836 % 
Fri Sep 27 01:30:53, Info:  Regression analysis of compute kernels: 
Fri Sep 27 01:30:53, Info:  "computeLocalIntegration" (total time): 491.429 s ( = 8 min 11.4288 s ) 
Fri Sep 27 01:30:53, Info:  "computeLocalIntegration" ( constant ): 2.09226e-05 (sample size: 523548 , standard error: 1.6501e-11 ) 
Fri Sep 27 01:30:53, Info:  "computeLocalIntegration" ( per element ): 8.29131e-08 (sample size: 523548 , standard error: 1.6501e-11 ) 
Fri Sep 27 01:30:53, Info:  "computeNeighboringIntegration" (total time): 594.518 s ( = 9 min 54.5179 s ) 
Fri Sep 27 01:30:53, Info:  "computeNeighboringIntegration" ( constant ): 0.000132888 (sample size: 523548 , standard error: 2.04105e-11 ) 
Fri Sep 27 01:30:53, Info:  "computeNeighboringIntegration" ( per element ): 9.05871e-08 (sample size: 523548 , standard error: 2.04105e-11 ) 
Fri Sep 27 01:30:53, Info:  "computeDynamicRupture" (total time): 528.325 s ( = 8 min 48.3253 s ) 
Fri Sep 27 01:30:53, Info:  "computeDynamicRupture" ( constant ): 8.22727e-05 (sample size: 385588 , standard error: 1.17534e-10 ) 
Fri Sep 27 01:30:53, Info:  "computeDynamicRupture" ( per element ): 4.49571e-07 (sample size: 385588 , standard error: 1.17534e-10 ) 
Fri Sep 27 01:30:53, Info:  "computePointSources" (total time): 0 s ( = 0.0000 s ) 
Fri Sep 27 01:30:53, Info:  "computePointSources" ( constant ): -nan (sample size: 0 , standard error: -nan ) 
Fri Sep 27 01:30:53, Info:  "computePointSources" ( per element ): -nan (sample size: 0 , standard error: -nan ) 
Fri Sep 27 01:30:53, Info:  Total time spent in compute kernels: 1614.27 s ( = 26 min 54.2720 s ) 
Fri Sep 27 01:30:53, Info:  Total calculated HW-FLOP:  1.0067 PFLOP 
Fri Sep 27 01:30:53, Info:  Total calculated NZ-FLOP:  402.4325 TFLOP 
Fri Sep 27 01:30:53, Info:  Total calculated HW-FLOP/s:  9.5607 TFLOP/s 
Fri Sep 27 01:30:53, Info:  Total calculated NZ-FLOP/s:  3.8218 TFLOP/s 
Fri Sep 27 01:30:53, Info:  WP calculated HW-FLOP:  834.1615 TFLOP 
Fri Sep 27 01:30:53, Info:  WP calculated NZ-FLOP:  274.1171 TFLOP 
Fri Sep 27 01:30:53, Info:  DR calculated HW-FLOP:  172.5724 TFLOP 
Fri Sep 27 01:30:53, Info:  DR calculated NZ-FLOP:  128.3155 TFLOP 
Fri Sep 27 01:30:53, Info:  PL calculated HW-FLOP:  0.0000 FLOP 
Fri Sep 27 01:30:53, Info:  PL calculated NZ-FLOP:  0.0000 FLOP 
Fri Sep 27 01:30:53, Info:  Time spent in simulation: 1 min 45.3018 s (min: 1 min 45.3017 s, max: 1 min 45.3034 s)
Fri Sep 27 01:30:53, Info:  Simulation done. 
Fri Sep 27 01:30:53, Info:  Closing IO. 
Fri Sep 27 01:30:54, Info:  Time wave field writer backend: 1.4049 s (min: 1.0181 s, max: 2.5949 s)
Fri Sep 27 01:30:54, Info:  Time wave field writer frontend: 20.2350 ms (min: 16.7757 ms, max: 31.3188 ms)
Fri Sep 27 01:30:54, Info:  Time fault writer backend: 623.2050 ms (min: 289.8138 ms, max: 4.4079 s)
Fri Sep 27 01:30:54, Info:  Time free surface writer backend: 162.8275 ms (min: 487.3940 µs, max: 1.5928 s)
Fri Sep 27 01:30:54, Info:  Time fault writer frontend: 5.5847 ms (min: 4.7199 ms, max: 6.4882 ms)
Fri Sep 27 01:30:54, Info:  Time free surface writer frontend: 1.1920 ms (min: 59.2640 µs, max: 8.7455 ms)
Fri Sep 27 01:30:54, Info:  SeisSol done. Goodbye. 
SeisSol complete.
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430 ~/haiti-rupture-inputs/dynamic-rupture/SH_max_test
Writing hdf5 output with compression enabled (compression_level=4). 
Use --compression=0 if you want to speed-up data extraction.
u1: 0it [00:00, ?it/s]u1: 1it [00:00,  7.63it/s]u1: 2it [00:00, 14.75it/s]
u2: 0it [00:00, ?it/s]u2: 1it [00:00,  9.65it/s]u2: 2it [00:00, 18.49it/s]
u3: 0it [00:00, ?it/s]u3: 1it [00:00,  9.54it/s]u3: 2it [00:00, 18.30it/s]
done writing output_jobid_3939430_extracted-surface.h5
done writing output_jobid_3939430_extracted-surface.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/output_jobid_3939430_extracted-surface.xdmf
Working on JobID: 3939430
No matching file found for jobid 3939430. Assigning output-fault.xdmf instead
/hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/output-fault.xdmf
warning: Mw computed over 0-85s (avoiding contribution of small residual moment after rupture)
jobid_3939430 moment magnitude: 5.875358453244145 (M0 = 8.2801e+17)
Finished writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/moment_rate_mainshock.png
Looking for output-fault.xdmf
mu_s: 0.52
mu_d: 0.16
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/output_jobid_3939430_extracted-fault.xdmf
full path: /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/output_jobid_3939430_extracted-fault.xdmf
done writing /hppfs/scratch/01/di35poq/haiti-rupture-outputs/dynamic-rupture-outputs/SH_max_test/jobid_3939430/output_jobid_3939430_extracted-fault.h5
Job ID set as: 3939430
mu_s: 0.52
mu_d: 0.16
~/haiti-rupture-inputs/dynamic-rupture/SH_max_test
